<resources>
    <string name="app_name" translatable="false">LibreTube</string>
    <string name="startpage">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="yes">Yes</string>
    <string name="search_hint">Search</string>
    <string name="videos">Videos</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="region">Region</string>
    <string name="importsuccess">Subscribed</string>
    <string name="downloadfailed">Download failed.</string>
    <string name="import_from_yt">Import subscriptions</string>
    <string name="import_from_yt_summary">From YouTube or NewPipe</string>
    <string name="app_theme">Theme</string>
    <string name="server_error">There seem to be a problem with the selected server. Try another instance.</string>
    <string name="unknown_error">Network error.</string>
    <string name="error">Something went wrong.</string>
    <string name="defres">Video resolution</string>
    <string name="grid">Grid columns (portrait)</string>
    <string name="grid_landscape">Grid columns (landscape)</string>
    <string name="emptyList">Nothing here.</string>
    <string name="deletePlaylist">Delete playlist</string>
    <string name="areYouSure">Delete the playlist?</string>
    <string name="createPlaylist">Create playlist</string>
    <string name="createNewPlaylist">Create new playlist</string>
    <string name="playlistCreated">Playlist created.</string>
    <string name="playlistName">Playlist name</string>
    <string name="emptyPlaylistName">The playlist name can\'t be empty</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="success">Done.</string>
    <string name="fail">Failed :(</string>
    <string name="about">About</string>
    <string name="changeLanguage">Language</string>
    <string name="systemLanguage">System</string>
    <string name="systemDefault">System</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="customization">Adjustments</string>
    <string name="website">Website</string>
    <string name="donate">Donate</string>
    <string name="uploaderAndVideoCount">%1$s • %2$d videos</string>
    <string name="subscriberAndVideoCounts">%1$s subscribers • %2$d videos</string>
    <string name="videoCount">%1$d videos</string>
    <string name="noInternet">Connect to the Internet first.</string>
    <string name="retry">Retry</string>
    <string name="comments">Comments</string>
    <string name="comments_count">Comments (%1$s)</string>
    <string name="replies">Replies</string>
    <string name="channels">Channels</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="playlists">Playlists</string>
    <string name="okay">OK</string>
    <string name="finished">Finished</string>
    <string name="history">History</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="music_songs">YT Music Songs</string>
    <string name="music_videos">YT Music Videos</string>
    <string name="music_albums">YT Music Albums</string>
    <string name="music_playlists">YT Music Playlists</string>
    <string name="music_artists">YT Music Artists</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="sponsorblock_summary">Uses the https://sponsor.ajay.app API</string>
    <string name="segment_skipped">Skipped segment</string>
    <string name="category_segments">Segments</string>
    <string name="category_sponsor">Sponsor</string>
    <string name="category_sponsor_summary">Paid promotion, paid referrals and direct advertisements. Not for self-promotion or free genuine shoutouts to causes, creators, websites, and products</string>
    <string name="category_selfpromo">Unpaid/Self Promotion</string>
    <string name="category_selfpromo_summary">Similar to \"sponsor\" except for unpaid or self promotion. This includes sections about merchandise, donations, or info about who they collaborated with</string>
    <string name="category_interaction">Interaction reminder</string>
    <string name="category_interaction_summary">When there is a short reminder to like, subscribe or follow in the middle of content. If long or about something specific, it should instead be self promotion</string>
    <string name="category_intro">Intermission/Intro Animation</string>
    <string name="category_intro_summary">An interval without actual content. Could be a pause, static frame, repeating animation. Should not be used for transitions containing info</string>
    <string name="category_outro">End cards and credits</string>
    <string name="category_outro_summary">Info following the ending. Not for conclusions with info</string>
    <string name="category_filler">Filler Tangent/Jokes</string>
    <string name="category_filler_summary">For tangential scenes added only for filler or humor not required to understand the main content of the video</string>
    <string name="category_music_offtopic">Music: Non-Music Section</string>
    <string name="category_music_offtopic_summary">Only for use in music videos. It should cover parts of the video not part of official mixes. In the end, the video should resemble the Spotify or any other mixed version as closely as possible, or reduce talking or other distractions</string>
    <string name="category_preview">Preview/Recap</string>
    <string name="category_preview_summary">For segments detailing future content without additional info. If it includes clips that only appear here, this is very likely the wrong category</string>
    <string name="category_highlight">Show video highlight</string>
    <string name="category_highlight_summary">Could either be the advertised title, the thumbnail or the most interesting part of the video. You can skip to it by tapping on it in the chapters section</string>
    <string name="category_exclusive_access">Exclusive Access</string>
    <string name="category_hook">Hook/Greetings</string>
    <string name="category_hook_summary">For narrative hooks that grab the viewer\'s attention (often as the first scene) by teasing or describing events from later in the same video or future episodes in a series</string>
    <string name="license">License</string>
    <string name="color_accent">Accents</string>
    <string name="color_red">Resting red</string>
    <string name="color_blue">Blissful blue</string>
    <string name="color_yellow">Yeeting yellow</string>
    <string name="color_green">Groovy green</string>
    <string name="color_purple">Pleasurable purple</string>
    <string name="material_you">Material You</string>
    <string name="sponsorblock_notifications">Notifications</string>
    <string name="app_icon">Icon</string>
    <string name="enabled">On</string>
    <string name="disabled">Off</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="playOnBackground">Play in the background</string>
    <string name="update_available">Update available</string>
    <string name="appearance">Appearance</string>
    <string name="downloads">Downloads</string>
    <string name="update_summary">Check for update</string>
    <string name="app_uptodate">Running the latest version.</string>
    <string name="playback_speed">Playback speed</string>
    <string name="advanced">Advanced</string>
    <string name="player">Player</string>
    <string name="appearance_summary">Adjust the app to your liking</string>
    <string name="live">Live</string>
    <string name="upcoming">Upcoming</string>
    <string name="shareTo">Share URL to</string>
    <string name="normal_views">%1$s views%2$s</string>
    <string name="defaultIcon">Default</string>
    <string name="legacyIcon">Lost legacy</string>
    <string name="gradientIcon">Glib gradient</string>
    <string name="fireIcon">Fashionable fire</string>
    <string name="torchIcon">Trendy torch</string>
    <string name="shapedIcon">Silly shaped</string>
    <string name="flameIcon">Flying flame</string>
    <string name="birdIcon">Boosted bird</string>
    <string name="invalid_url">Please enter a URL that works</string>
    <string name="version">Version %1$s</string>
    <string name="show_updates">Check updates automatically</string>
    <string name="show_updates_summary">Check for updates automatically every time the app is started.</string>
    <string name="related_streams">Related content</string>
    <string name="related_streams_summary">Show similar streams alongside what you watch</string>
    <string name="buffering_goal">Preloading</string>
    <string name="buffering_goal_summary">Max. amount of seconds of video to buffer</string>
    <string name="no_audio">No audio</string>
    <string name="no_video">No video</string>
    <string name="no_subtitle">No subtitle</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="downloading">Downloading…</string>
    <string name="download_paused">Download paused</string>
    <string name="download_completed">Download completed</string>
    <string name="player_summary">Defaults and behavior</string>
    <string name="audio_video">Audio and video</string>
    <string name="history_summary">Watch and search history</string>
    <string name="general">General</string>
    <string name="general_summary">Downloads and data-saver</string>
    <string name="notifications">Notifications</string>
    <string name="notify_new_streams">Show notifications for new streams</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="audio_video_summary">Quality and format</string>
    <string name="backup_restore_summary">Import and export subscriptions, playlists, …</string>
    <string name="crashlog">Crashlog</string>
    <string name="continue_watching">Continue watching</string>
    <string name="onboarding_title_languages">What languages do you watch?</string>
    <string name="onboarding_title_categories">What do you enjoy watching?</string>
    <string name="get_started">Get Started</string>
    <string name="lang_english">English</string>
    <string name="lang_hindi">Hindi</string>
    <string name="lang_tamil">Tamil</string>
    <string name="lang_telugu">Telugu</string>
    <string name="lang_malayalam">Malayalam</string>
    <string name="lang_kannada">Kannada</string>
    <string name="lang_bengali">Bengali</string>
    <string name="lang_marathi">Marathi</string>
    <string name="lang_punjabi">Punjabi</string>
    <string name="lang_other">Other</string>
    <string name="cat_music">Music</string>
    <string name="cat_gaming">Gaming</string>
    <string name="cat_news">News</string>
    <string name="cat_education">Education</string>
    <string name="cat_comedy">Comedy</string>
    <string name="cat_tech">Tech</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_vlogs">Vlogs</string>
    <string name="cat_cooking">Cooking</string>
    <string name="cat_finance">Finance</string>
    <string name="cat_fitness">Fitness</string>
    <string name="cat_movies">Movies</string>
    <string name="cat_anime">Anime</string>
    <string name="cat_podcasts">Podcasts</string>
    <string name="content_preferences">Content Preferences</string>
    <string name="content_preferences_summary">Customize your feed recommendations</string>
</resources>